GearsetPOC/force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Transfer</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>eVoucher</fullName>
            </value>
            <value>
                <fullName>transfer</fullName>
                <label>Program Transfer</label>
            </value>
            <value>
                <fullName>commercialgesture</fullName>
                <label>Free</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>