GearsetPOC/force-app/main/default/objects/Payment_Transaction__c/fields/Post_PayTrans__c.field-meta.xml
<CustomField>
    <fullName>Post_PayTrans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post PayTrans</label>
    <type>Checkbox</type>
</CustomField>