GearsetPOC/force-app/main/default/objects/Payment_Transaction__c/fields/Promo__c.field-meta.xml
<CustomField>
    <fullName>Promo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promo</label>
    <referenceTo>Promo__c</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>