GearsetPOC/force-app/main/default/objects/Payment_Transaction__c/fields/TECH_Bad_Request__c.field-meta.xml
<CustomField>
    <fullName>TECH_Bad_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Bad Request</label>
    <type>Checkbox</type>
</CustomField>