GearsetPOC/force-app/main/default/objects/Payment_Transaction__c/fields/Transaction_Svoc_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Svoc_Id__c</fullName>
    <externalId>true</externalId>
    <label>Transaction Svoc Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>